--- a/regional_info/templates/regional_info/home.html
+++ b/regional_info/templates/regional_info/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {%block content%}
 
-<div class="container">
-  <table class="table table-bordered border-primary">
+<div class="container ">
+  <table class="table table-bordered border-primary  table-hover">
     <thead class="table-dark">
       <tr>
         <th scope="col">region Number</th>
@@ -39,20 +39,12 @@
               </p>
 
               <div data-mdb-input-init class="form-outline form-white mb-4">
-                <input
-                  type="email"
-                  id="typeEmailX"
-                  class="form-control form-control-lg"
-                />
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
                 <label class="form-label" for="typeEmailX">Email</label>
               </div>
 
               <div data-mdb-input-init class="form-outline form-white mb-4">
-                <input
-                  type="password"
-                  id="typePasswordX"
-                  class="form-control form-control-lg"
-                />
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
                 <label class="form-label" for="typePasswordX">Password</label>
               </div>
 
@@ -60,25 +52,14 @@
                 <a class="text-white-50" href="#!">Forgot password?</a>
               </p>
 
-              <button
-                data-mdb-button-init
-                data-mdb-ripple-init
-                class="btn btn-outline-light btn-lg px-5"
-                type="submit"
-              >
+              <button data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-lg px-5" type="submit">
                 Login
               </button>
 
               <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-facebook-f fa-lg"></i
-                ></a>
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-twitter fa-lg mx-4 px-2"></i
-                ></a>
-                <a href="#!" class="text-white"
-                  ><i class="fab fa-google fa-lg"></i
-                ></a>
+                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
               </div>
             </div>
 
