--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static%}
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Ethiopia's Region Management System</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Ethiopia's Region Management System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,15 +28,27 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href=" {% url 'create_regions' %}">Add Region</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Login</a>
+                    {% if user.is_authenticated %}
+                          <li class="nav-item">
+                        <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                     {% csrf_token %}
+                     <button type="submit" class="nav-link active" >Logout</button>
+                     </form>
+                        
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Logout</a>
+
+                     {%else %}
+
+                       <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'login'%}">Login</a>
                     </li>
+                   
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">SignUp</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'register' %}">SignUp</a>
                     </li>
+                    {% endif %}
+                   
+                  
 
                 </ul>
 
